--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{ include = 'src/' }]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "~3.11"
 click = "^8.1.7"
 flake8 = "^7.0.0"
 Sphinx = "^7.3.7"
@@ -18,6 +18,7 @@ requests = "^2.32.3"
 pvporcupine = "^3.0.2"
 pydantic-settings = "^2.3.3"
 pvrecorder = "^1.2.2"
+openai-whisper = {git = "https://github.com/openai/whisper.git"}
 
 
 [tool.poetry.group.dev.dependencies]
