--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pvporcupine = "^3.0.2"
 pydantic-settings = "^2.3.3"
 pvrecorder = "^1.2.2"
 openai-whisper = {git = "https://github.com/openai/whisper.git"}
+openai = "^1.34.0"
 
 
 [tool.poetry.group.dev.dependencies]
